Fix primary text alignment

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -102,6 +102,7 @@ hr {
     height: 85%;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
 
